# amake-chain

./: .codecov.yml  .gitignore  LICENSE  Makefile  README.md  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: suggest-a-feature.md
.github/workflows/: coverage.yml
.maintain/: pallet-weight-template.hbs
node/amake-dev/: Cargo.toml
node/amake-dev/src/: chain_spec.rs  command.rs  executor.rs  rpc.rs  service.rs
node/coco/: Cargo.toml
node/coco/src/: chain_spec.rs  command.rs  service.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/coco/: Cargo.toml
runtime/coco/src/: lib.rs
runtime/dev/: Cargo.toml
runtime/dev/src/: impls.rs  lib.rs
scripts/: docker_run.sh
