[package]
name        = 'amake-dev'
authors    =  ["AmakeNetwork"]
description = 'amake dev node '
license     = 'Apache 2.0'
version     = '1.0.0'
homepage   =  "https://github.com/AmakeNetwork/amake-chain"
repository =  "https://github.com/AmakeNetwork/amake-chain"
edition     = '2018'
build       = 'build.rs'


[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[[bin]]
name = "amake-dev"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec        = { package = "parity-scale-codec", version = "2.0.0" }
serde        = { version = "1.0.126", features = ["derive"] }
serde_json   = { version = "1.0"}
futures      = { version = "0.3.16" }
hex-literal  = { version = "0.3.1" }
log          = { version = "0.4.8" }
rand         = { version = "0.7.2" }
jsonrpc-core = { version = "15.1.0" }
structopt    = { version = "0.3.8", optional = true }


# primitives
sp-authority-discovery       = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sp-consensus-babe            = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
grandpa-primitives           = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', package = "sp-finality-grandpa" }
sp-core                      = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sp-api                       = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sp-runtime                   = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sp-timestamp                 = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sp-authorship                = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sp-inherents                 = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sp-blockchain                = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sp-block-builder             = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sp-keyring                   = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sp-keystore                  = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sp-consensus                 = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sp-transaction-pool          = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sp-transaction-storage-proof = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }




# client dependencies
sc-client-api                 = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sc-rpc-api                    = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sc-chain-spec                 = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sc-consensus                  = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sc-transaction-pool-api           = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sc-transaction-pool           = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }

sc-network                    = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sc-consensus-slots            = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sc-consensus-babe             = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sc-consensus-uncles           = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sc-consensus-epochs           = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
grandpa                       = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', package = "sc-finality-grandpa" }
sc-consensus-babe-rpc         = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10'}
sc-finality-grandpa-rpc         = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10'}
sc-rpc                        = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sc-basic-authorship           = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sc-service                    = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false }
sc-telemetry                  = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sc-executor                   = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sc-authority-discovery        = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sc-sync-state-rpc             = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }






# frame dependencies
frame-system                   = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
pallet-transaction-payment     = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
pallet-im-online               = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false }
substrate-frame-rpc-system     = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
pallet-contracts-rpc           = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
pallet-mmr-rpc                 = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }


# node-specific dependencies
amake-runtime    = { version = "1.0.0", path = "../../runtime/dev" }
amake-primitives = { version = "1.0.0", path = "../../primitives" }


# CLI-specific dependencies
sc-cli                 = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
frame-benchmarking     = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
node-inspect           = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
try-runtime-cli        = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }



[dev-dependencies]
sc-keystore         = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sc-consensus        = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sc-consensus-babe   = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sc-consensus-epochs = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sc-service-test     = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
futures             = { version = "0.3.9" }
tempfile            = { version = "3.1.0" }
assert_cmd          = { version = "1.0" }
nix                 = { version = "0.19" }
serde_json          = { version = "1.0" }
regex               = { version = "1" }
platforms           = { version = "1.1" }
async-std           = { version = "1.6.5", features = ["attributes"] }
soketto             = { version = "0.4.2" }


[build-dependencies]
structopt                    = { version = "0.3.8", optional = true }
frame-benchmarking-cli       = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', optional = true }
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', optional = true }
substrate-frame-cli          = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', optional = true }
try-runtime-cli              = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', optional = true }
sc-cli                       = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', optional = true }


[features]
default = ["cli"]
cli = [
    "sc-cli",
    "frame-benchmarking-cli",
    "substrate-frame-cli",
    "sc-service/db",
    "structopt",
    "substrate-build-script-utils",
    "try-runtime-cli",
]
runtime-benchmarks = [
    "amake-runtime/runtime-benchmarks",
    "frame-benchmarking-cli",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["amake-runtime/try-runtime", "try-runtime-cli"]
